--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,37 +1,35 @@
 site_name: Zheming Gao
 site_url: https://www.zheminggao.site/
-;repo_url: https://tonygaobasketball/tonygaobasketball.github.io/
+# repo_url: https://github.com/tonygaobasketball/tonygaobasketball.github.io/
 
 
 nav:
-- Home: index.md
-- Publications: pub.md
-- Teaching: teach.md
-- Research: research.md 
+  - Home: index.md
+  - Publications: pub.md
+  - Teaching: teach.md
+  - Group: group.md
+  - Service: service.md
 
 theme:
     name: mkdocs
     nav_style: dark
-    <!--highlightjs: true-->
     hljs_languages:
         - yaml
         - rust
-;theme:
-;  name: material
-;  palette:
-;    - scheme: default
-;      toggle:
-;        icon: material/toggle-switch-off-outline
-;        name: Switch to dark mode
-;    - scheme: slate
-;      toggle:
-;        icon: material/toggle-switch
-;        name: Switch to light mode-->
 
-markdown_extensions:
-;  - toc:
-;      permalink: True
-  - attr_list
+# theme:
+#  name: material
+#  palette:
+#    - scheme: default
+#      toggle:
+#        icon: material/toggle-switch-off-outline
+#        name: Switch to dark mode
+#    - scheme: slate
+#      toggle:
+#        icon: material/toggle-switch
+#        name: Switch to light mode-->
+
+
 
 copyright: 
-    Copyright &copy; Zheming Gao 2021
+    Copyright &copy; Zheming Gao 2021-2025
